# cybercare-consumer

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
src/: __init__.py  main.py
src/application/: create_event.py
src/application/ports/: db_provider.py  event_repository.py  http_server.py
src/core/: __init__.py  event.py  exceptions.py
src/infrastructure/: __init__.py
src/infrastructure/config/: settings.py
src/infrastructure/logging/: logger.py
src/infrastructure/postgres/: db.py  db_provider.py  event_repository.py
src/infrastructure/postgres/models/: event.py
src/presentation/fastapi/: __init__.py  dependencies.py  server.py
src/presentation/fastapi/models/: event.py
src/presentation/fastapi/routes/: event_routes.py  health_routes.py
tests/: __init__.py  test_main.py
tests/application/: __init__.py  test_create_event_uc.py
tests/core/: test_events.py
tests/infrastructure/: __init__.py
tests/infrastructure/config/: test_settings.py
tests/infrastructure/postgres/: __init__.py  test_db.py  test_event_repository.py
tests/presentation/: __init__.py
tests/presentation/fastapi/: __init__.py  test_dependencies.py  test_event_routes.py  test_models.py  test_server.py
